# worddict

./: .gitignore  CMakeLists.txt  Makefile  README.md
cmake/: LICENSE  Makefile_driver.in  README.md  build_flags.cmake  build_targets.cmake  build_utils.cmake  common.cmake  custom_test_targets.cmake  driver_targets.cmake  external_targets.cmake  main.cmake  utils.cmake  wrapper_targets.cmake
libs/worddict/: CMakeLists.txt  builder.h  worddict.h
libs/worddict/details/: dawg_builder.h  dawg_dict.h  dictraits.h
tests/: CMakeLists.txt  ut_dawg_dict.cpp  ut_word_dict.cpp
